--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,13 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-  
+
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyDk-znoaUbRuF-UHUzmP37MWQTXJcqLRns"></script>
+  <!-- <script src="http://maps.google.com/maps/api/js?key=IzaSyAcXaX5PgvOS9PsKLt079-qZMK11Iow8kw"></script> -->
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
